show special resource quantity

--- a/src/assets/TileResourcesSummary/TileResourcesSummary.module.css
+++ b/src/assets/TileResourcesSummary/TileResourcesSummary.module.css
@@ -1,3 +1,9 @@
 .tile-per-turn-table-container {
   padding: 5px;
 }
+
+.tile-display-special-resource-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
