--- a/src/RealmsGame.module.css
+++ b/src/RealmsGame.module.css
@@ -1,4 +1,5 @@
 .city-modal-dialog {
-  width: 50vw;
-  max-width: 50vw;
+  min-width: 600px;
+  width: 600px !important;
+  max-width: 600px !important;
 }
